--- a/apps/api/appsettings.json
+++ b/apps/api/appsettings.json
@@ -1,4 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=hickory;Username=hickory;Password=hickory_dev_password"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
