feat(api): Authentication services - JWT, password hashing, login/register
Implements Tasks T014-T021:
- JWT token generation and validation service
- PBKDF2 password hashing (100k iterations)
- Login handler with credential verification
- Register handler with email uniqueness check
- Auth DTOs and FluentValidation validators
- JWT Bearer authentication configuration
- Auth controller with login and register endpoints

Technical details:
- JWT: HS256 with 60-minute expiration
- Password: Min 8 chars with complexity requirements
- MediatR handlers for CQRS pattern
- FluentValidation for input validation
- Default EndUser role for new registrations

--- a/apps/api/appsettings.json
+++ b/apps/api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=hickory;Username=hickory;Password=hickory_dev_password"
   },
+  "JWT": {
+    "Secret": "your-super-secret-jwt-key-at-least-32-characters-long-change-in-production",
+    "Issuer": "hickory-api",
+    "Audience": "hickory-web",
+    "ExpirationMinutes": "60"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
