feat: Phase 2.4 - Frontend Authentication UI (T031-T040)
- Added TanStack Query, axios, zustand dependencies
- Created API client with JWT token interceptors
- Implemented Zustand auth store with persistence
- Added auth hooks (useLogin, useRegister, useLogout)
- Created login and register pages with forms
- Added AuthGuard component for protected routes
- Created dashboard page with user info display
- Updated home page to redirect to dashboard
- Configured TypeScript path aliases (@/)
- Added CLI auth commands (login, logout)
- Fixed PostCSS config for Tailwind v4

All components build successfully with Node v25.0.0

--- a/apps/api/Hickory.Api.csproj
+++ b/apps/api/Hickory.Api.csproj
@@ -20,6 +20,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="NSwag.MSBuild" Version="14.6.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.13.1" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.13.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.13.0-beta.1" />
