--- a/package.json
+++ b/package.json
@@ -61,11 +61,15 @@
   },
   "nx": {},
   "dependencies": {
-    "axios": "^1.6.0",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.12.2",
     "commander": "^14.0.2",
     "inquirer": "^12.10.0",
     "next": "~15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.8"
   }
 }
