--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
     "commander": "^14.0.2",
+    "date-fns": "^4.1.0",
     "inquirer": "^12.10.0",
     "next": "~15.2.4",
     "react": "^19.0.0",
