--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "nx": {},
   "dependencies": {
+    "@microsoft/signalr": "^9.0.6",
     "@tailwindcss/postcss": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
