--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Hickory Help Desk Ticket System",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:performance": "npm run test:perf:ticket-submission",
+    "test:perf:ticket-submission": "ts-node --project tests/performance/tsconfig.json tests/performance/ticket-submission.perf.test.ts"
   },
   "repository": {
     "type": "git",
