--- a/package.json
+++ b/package.json
@@ -64,16 +64,25 @@
   "nx": {},
   "dependencies": {
     "@microsoft/signalr": "^9.0.6",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "commander": "^14.0.2",
     "date-fns": "^4.1.0",
     "inquirer": "^12.10.0",
+    "lucide-react": "^0.548.0",
     "next": "~15.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   }
 }
