fix(ci): add dotnet restore before running migrations in E2E tests
Fixes NETSDK1004 error where project.assets.json was not found.
The downloaded artifacts don't include the obj/ folder, so we need
to restore dependencies before running dotnet-ef commands.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -419,6 +419,7 @@ jobs:
       - name: Run Database Migrations
         run: |
           dotnet tool install --global dotnet-ef || true
+          dotnet restore apps/api/Hickory.Api.csproj
           dotnet ef database update --project apps/api/Hickory.Api.csproj --configuration Release
         env:
           ASPNETCORE_ENVIRONMENT: Development
