fix(ci): use dotnet-ef 9.x to match .NET 9.0 project
Fixes System.Runtime FileNotFoundException by ensuring dotnet-ef
version matches the .NET SDK version used in the project.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -418,7 +418,7 @@ jobs:
       
       - name: Run Database Migrations
         run: |
-          dotnet tool install --global dotnet-ef || true
+          dotnet tool install --global dotnet-ef --version 9.* || true
           dotnet restore apps/api/Hickory.Api.csproj
           dotnet ef database update --project apps/api/Hickory.Api.csproj --configuration Release
         env:
