feat: Add Redis health check monitoring
- Add AspNetCore.HealthChecks.Redis NuGet package
- Configure Redis health check in Program.cs with 5-second timeout
- Add Redis connection string to appsettings.json
- Create comprehensive integration tests with Testcontainers
- Update README with health check documentation
- Skip database seeder in test environments

Closes #38

--- a/apps/api/appsettings.json
+++ b/apps/api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=hickory;Username=hickory;Password=hickory_dev_password"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=hickory;Username=hickory;Password=hickory_dev_password",
+    "Redis": "localhost:6379"
   },
   "JWT": {
     "Secret_Comment": "DEVELOPMENT ONLY: This secret is for local development. In production, override via environment variable or a secrets manager.",
