--- a/apps/api/Hickory.Api.IntegrationTests/Hickory.Api.IntegrationTests.csproj
+++ b/apps/api/Hickory.Api.IntegrationTests/Hickory.Api.IntegrationTests.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="Respawn" Version="6.2.1" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="3.10.0" />
+    <PackageReference Include="Testcontainers.Redis" Version="3.10.0" />
     <PackageReference Include="xunit" Version="2.9.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -33,6 +34,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hickory.Api.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- Prevent copying appsettings files from the main project -->
+    <Content Remove="..\appsettings*.json" />
   </ItemGroup>
 
 </Project>
