--- a/apps/api/Hickory.Api.csproj
+++ b/apps/api/Hickory.Api.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="9.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MassTransit" Version="8.5.6" />
     <PackageReference Include="MassTransit.Redis" Version="8.5.6" />
