--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [main, develop, 'feature/**', 'fix/**', '001-help-desk-core']
+    branches: [main, develop]
   pull_request:
     branches: [main, develop]
 
