Implement database connection pooling and resilience (#68)
- Configure Npgsql connection pooling with optimized settings
  - Min/Max pool size, connection lifetime, idle timeout
  - Auto-prepare frequently used statements for performance
  - NoResetOnClose for improved connection reuse

- Add Polly-based resilience policies
  - Retry policy for transient PostgreSQL errors
  - Exponential backoff with jitter
  - Circuit breaker to prevent cascading failures

- Implement connection pool metrics
  - Track opened/closed/failed connections
  - Monitor pool usage (active/idle/total)
  - Integration with OpenTelemetry

- Add database pool health check
  - Validates pool configuration
  - Warns on insufficient pool size
  - Available at /health/ready endpoint

- Add DatabaseOptions configuration model
- Add comprehensive documentation

Closes #68

--- a/apps/api/appsettings.json
+++ b/apps/api/appsettings.json
@@ -3,6 +3,21 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=hickory;Username=hickory;Password=hickory_dev_password",
     "Redis": "localhost:6379"
   },
+  "Database": {
+    "MinPoolSize": 2,
+    "MaxPoolSize": 20,
+    "ConnectionLifetimeSeconds": 600,
+    "ConnectionIdleLifetimeSeconds": 300,
+    "ConnectionTimeoutSeconds": 15,
+    "CommandTimeoutSeconds": 30,
+    "EnablePooling": true,
+    "EnableRetryPolicy": true,
+    "RetryCount": 3,
+    "RetryDelaySeconds": 2,
+    "EnableCircuitBreaker": true,
+    "CircuitBreakerThreshold": 5,
+    "CircuitBreakerDurationSeconds": 60
+  },
   "JWT": {
     "Secret_Comment": "DEVELOPMENT ONLY: This secret is for local development. In production, override via environment variable or a secrets manager.",
     "Secret": "your-super-secret-jwt-key-at-least-32-characters-long-change-in-production",
