feat: Implement file attachment support (#150)
- Add Attachment entity with EF Core configuration
- Create IFileStorageService interface with local storage implementation
- Implement upload, download, and delete attachment API endpoints
- Add comprehensive file validation (type, size, sanitization)
- Create FileUpload component with drag-and-drop support
- Create AttachmentList component for displaying and managing attachments
- Add attachment methods to API client
- Update .gitignore to allow code directories named 'storage' and 'attachments'
- Configure file storage settings in appsettings.json

Features:
- Drag-and-drop file upload with progress tracking
- Multiple file upload support
- 10MB file size limit with validation
- Whitelist for allowed file types (images, documents, archives)
- Secure file storage with unique paths
- Download and delete capabilities
- Access control placeholders for production

--- a/apps/api/appsettings.json
+++ b/apps/api/appsettings.json
@@ -25,6 +25,9 @@
     "Audience": "hickory-web",
     "ExpirationMinutes": "60"
   },
+  "FileStorage": {
+    "StorageRootPath": "storage/attachments"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
