simplify: one-command Docker startup with auto-migration
- Add Database:AutoMigrate config option
- Auto-run migrations in Docker and development
- Simplify README to reflect Hickory philosophy
- Update quick start to single docker compose command
- Add philosophy section explaining what we don't build

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       - JWT__Issuer=hickory-api
       - JWT__Audience=hickory-web
       - JWT__ExpirationMinutes=60
+      - Database__AutoMigrate=true
       - Logging__LogLevel__Default=Information
       - Logging__LogLevel__Microsoft.AspNetCore=Warning
       - SMTP__Host=mailhog
