feat(api): add rate limiting middleware
- Add built-in .NET rate limiting (no external packages)
- Global limit: 100 requests/minute per IP or user
- Auth endpoints: 10 requests/minute (brute force protection)
- Configurable via appsettings.json
- Returns 429 Too Many Requests with Retry-After header
- RFC 7807 compliant error response

Closes #30

--- a/apps/api/appsettings.json
+++ b/apps/api/appsettings.json
@@ -18,6 +18,12 @@
     "CircuitBreakerThreshold": 5,
     "CircuitBreakerDurationSeconds": 60
   },
+  "RateLimiting": {
+    "PermitLimit": 100,
+    "WindowMinutes": 1,
+    "AuthPermitLimit": 10,
+    "AuthWindowMinutes": 1
+  },
   "JWT": {
     "Secret_Comment": "DEVELOPMENT ONLY: This secret is for local development. In production, override via environment variable or a secrets manager.",
     "Secret": "your-super-secret-jwt-key-at-least-32-characters-long-change-in-production",
