--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@testing-library/dom": "10.4.1",
     "@testing-library/react": "16.3.1",
     "@types/jest": "^30.0.0",
-    "@types/node": "20.19.9",
+    "@types/node": "^25.0.6",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
